hydro_lang/tests/compile-fail-stable/send_lifetime.rs
../compile-fail/send_lifetime.rs